fix z-index sidebar

--- a/css/portable.css
+++ b/css/portable.css
@@ -24,6 +24,7 @@ header {
     position: fixed;
     bottom: 0;
     border-right: 0;
+    z-index: -1;
     background: #2b2c57;
     height: 100vh;
     min-width: 100%;
